# nexo-note

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
npm/: .npmignore  README.md  install.js  package.json
skills/nexo-note/: examples.md  install.ps1  install.sh  instructions.md  skill.yaml
src/: cli.rs  config.rs  main.rs  output.rs
src/commands/: archive.rs  completions.rs  config_cmd.rs  create.rs  delete.rs  edit.rs  init.rs  init_mcp.rs  link.rs  list.rs  migrate.rs  mod.rs  search.rs  serve.rs  stats.rs  thread.rs  ui.rs  view.rs
src/commands/tag/: list.rs  mod.rs  rename.rs  suggest.rs
src/mcp/: server.rs
src/models/: frontmatter.rs  mod.rs  note.rs  tag.rs
src/storage/: db.rs  git.rs  mod.rs  repo.rs
tests/: integration_tests.rs
ui/: DESIGN_SPEC.md  next.config.js  package-lock.json  package.json
ui/src/app/: design-tokens.css  globals.css  layout.tsx  page.tsx
ui/src/app/notes/[id]/: page.tsx
ui/src/app/thread/[id]/: page.tsx
ui/src/components/: AppSidebar.tsx  NoteList.tsx  NoteTable.tsx  NoteViewer.tsx  Sidebar.tsx  ThreadGraph.tsx
ui/src/lib/: api.ts  categories.ts
