[package]
name = "nexo-note"
version = "0.6.0"
edition = "2024"
description = "A local markdown-based notes CLI for your knowledge base"
authors = ["FantasyStarry"]
license = "MIT"
repository = "https://github.com/FantasyStarry/nexo-note"

[[bin]]
name = "nexo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
anyhow = "1"
edit = "0.1"
toml = "0.8"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "io-util", "macros"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tower = "0.5"
